# django-mysql-to-postgres

./: .gitignore  README.md  analyze_models.py  migrate_from_mysql.py  pyproject.toml
src/django_mysql_to_postgres/cli/: main.py  prompts.py
src/django_mysql_to_postgres/logic/: analysis.py  migration.py
