[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-mysql-to-postgres"
version = "1.0.0"
authors = [
  { name = "Bruno Alves", email = "bruno6821@gmail.com" },
]
description = "An interactive CLI tool to flawlessly migrate DATA from MySQL to PostgreSQL for Django projects. It preserves primary keys, timestamps (auto_now/auto_now_add), and handles complex model dependencies, including circular ones."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["django", "mysql", "postgres", "postgresql", "migration", "data", "migrate", "database", "etl", "porter", "mysql-to-postgres", "db-porter", "data-porter", "data-migration", "django-mysql-to-postgres", "data-migration-tool", "data-migration-tool"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: System :: Systems Administration",
]

# Core dependencies required for the package to run
dependencies = [
    "django>=3.2",
    # Instala o Typer com todas as suas dependências opcionais, incluindo 'rich'
    "typer[all]",
    "questionary",
]

[project.urls]
Homepage = "https://github.com/BrunoAlz/django-mysql-to-postgres"
"Bug Tracker" = "https://github.com/BrunoAlz/django-mysql-to-postgres/issues"

[project.scripts]
db-porter = "django_mysql_to_postgres.cli.main:run"

[project.optional-dependencies]
mysql = ["mysqlclient"]
postgres = ["psycopg2-binary"]
# Grupo de conveniência que instala todos os drivers
all = ["django-mysql-to-postgres[mysql,postgres]"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"] # Adiciona mais algumas regras úteis

[tool.ruff.isort]
known-first-party = ["django_mysql_to_postgres"]

[tool.black]
line-length = 88